--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-full-screen": "^1.1.1",
     "react-hook-form": "^7.39.7",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
